Prevent line wraps on word e-commerce

--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,10 @@ a:hover {
   transform: scale(1.1);
 }
 
+.nobr {
+  white-space: nowrap;
+}
+
 #image {
   margin: 10px 0;
   width: 200px;
